# MEI-MajorsDegree

./: README.md
Complementares/BDNSQL/: README.md
Complementares/BDNSQL/Trabalho Prático/: README.md  esboco.txt  queries_MONGODB.txt  queries_NEO4J.txt  queries_SQL.sql
Complementares/SSI/: README.md
Complementares/SSI/TP1/: graph.drawio
MFES/: README.md
MFES/AC/: README.md
MFES/AC/Trabalhos/: README.md
MFES/AC/UPPAAL/: coffee-machine.xml  commited-example.xml  fischer.xml  mutual-exclusion.xml  train-gate.xml
MFES/AC/timedAutomatas/: resolution
MFES/EM/: README.md
MFES/EM/Avaliações/: aval2.als  aval3.als  aval4.als  camaleoes.ele  filosofos.ele  filosofos_sand.ele
MFES/EM/Especificação/: class_fol.als  class_rl.als  cv_man.als  file_fol.als  file_rl.als  graph.als  prodlines.als  state.als  teste.ele  train_tl.als  trash_tl.als
MFES/EM/ModelChecking/: cards.ele  grandparents.ele  leader.ele  trains.ele  two-phase.ele  worker.ele
MFES/EM/TLA/: e1.tla  leader.tla
MFES/EM/Trabalho/: Consensus.ele  Paxos.ele  README.md  Voting.ele  consensus.thm  paxos.thm  voting.thm
MFES/VF/: README.md
MFES/VF/COQ/: .lesson1.aux
MFES/VF/SAT-Solving/: conversao-e3.cnf  example.cnf  meeting-e2.cnf  puzzle.cnf  sitting-e5.cnf  unicorn-e4.cnf
MFES/VF/SMT-Solving/: arr-e5.smt2  crypt-e4.smt2  equacoes-e1.smt2  queens-e6.smt2  skypuzzle-e7.smt2  (+2 more)
PLC/: README.md
PLC/GCS/: README.md  errosSintaticosSemanticos.txt
PLC/PRC/: README.md
PLC/PRI/: README.md
PLC/SPLN/: README.md
PLC/SPLN/Aulas/a09/genlr/: LICENSE  genlr.py  pyproject.toml  test_pai.py
(+635 files in other folders)
